Updated OA annotations and tests
