# app/Http/Requests/LoginRequest.php
@@ -1,0 +1,55 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+/**
+ * @OA\Schema(
+ *     title="Login Request",
+ *     description="Login request body data"
+ * )
+ */
+class LoginRequest extends FormRequest
+{
+    /**
+     * @OA\Property(
+     *     title="email"
+     * )
+     *
+     * @var string
+     */
+    public $email;
+
+    /**
+     * @OA\Property(
+     *     title="password"
+     * )
+     *
+     * @var string
+     */
+    public $password;
+
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return false;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'email' => 'required',
+            'password' => 'required',
+        ];
+    }
+}
